--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -1,55 +1,87 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-    <title>Orange Fitness - Home</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../CSS/style.css">
+  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+  <title>Politica de Privacidade</title>
+  
+</head>
+<body>
     <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
-        </ul>
-      </nav>
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+        <nav>
+            <ul>                                 
+              <li><a href="./carrinho.html">Carrinho</a></li>
+              <li><a href="./membros.html">Membros</a></li>
+              <li><a href="./galeria.html">Galeria</a></li>
+              <li><a href="./horario.html">Horários</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
-        <p>
-          A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
-          condicionamento físico. Oferecemos uma ampla gama de programas de
-          treinamento, instrutores experientes e instalações de última geração.
-        </p>
-      </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
-        <p>
-          Segunda a Sexta: 6h - 22h<br />
-          Sábado: 8h - 18h<br />
-          Domingo: Fechado
-        </p>
-      </section>
-      <section class="location">
-        <h2>Localização</h2>
-        <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
-        </p>
-      </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
-      </section>
+      <h1>Política de Privacidade</h1>
+      <p>
+        Esta Política de Privacidade descreve como o Orange Fitness coleta, usa
+        e protege as informações pessoais dos usuários do nosso site. Ao usar
+        este site, você concorda com as práticas descritas nesta política.
+      </p>
+      <h2>Informações Coletadas</h2>
+      <p>O Orange Fitness pode coletar as seguintes informações pessoais:</p>
+      <ul>
+        <li>Nome</li>
+        <li>Endereço de e-mail</li>
+        <li>Informações de contato</li>
+        <li>Informações de pagamento</li>
+      </ul>
+
+      <h2>Uso das Informações</h2>
+      <p>
+        As informações pessoais coletadas podem ser usadas para os seguintes
+        fins:
+      </p>
+      <ul>
+        <li>Processamento de pedidos e pagamentos</li>
+        <li>Envio de informações e atualizações</li>
+        <li>Responder a perguntas e solicitações</li>
+      </ul>
+
+      <h2>Proteção de Dados</h2>
+      <p>
+        O Orange Fitness está empenhado em proteger suas informações pessoais e
+        adota medidas de segurança adequadas para evitar o acesso não
+        autorizado, a divulgação ou a alteração dessas informações.
+      </p>
+
+      <h2>Divulgação a Terceiros</h2>
+      <p>
+        O Orange Fitness não compartilhará suas informações pessoais com
+        terceiros, a menos que seja necessário para o cumprimento de obrigações
+        legais ou para fornecer serviços solicitados por você.
+      </p>
+
+      <h2>Cookies</h2>
+      <p>
+        O site do Orange Fitness pode usar cookies para melhorar a experiência
+        do usuário. Você pode ajustar as configurações do seu navegador para
+        recusar cookies, se desejar.
+      </p>
+
+      <h2>Alterações na Política</h2>
+      <p>
+        O Orange Fitness se reserva o direito de fazer alterações nesta política
+        de privacidade a qualquer momento. As alterações serão publicadas nesta
+        página.
+      </p>
+
+      <h2>Contato</h2>
+      <p>
+        Se você tiver alguma dúvida sobre esta Política de Privacidade, entre em
+        contato conosco através do seguinte endereço de e-mail:
+        <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a
+        >.
+      </p>
     </main>
     <footer class="footer">
       <section>
@@ -159,15 +191,15 @@
           <div class="footerLinkPage">
             <h2 class="footerTitler">Institucional</h2>
             <ul >
-              <li><a href="./assets/pages/sobre.html">Sobre a Academia</a></li>
-              <li><a href="./assets/pages/termos.html">Termos de Uso</a></li>
+              <li><a href="./sobre.html">Sobre a Academia</a></li>
+              <li><a href="./termos.html">Termos de Uso</a></li>
               <li>
-                <a href="./assets/pages/politicas.html"
+                <a href="./politicas.html"
                   >Política de Privacidade</a>
               </li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./faleConosco.html">Fale Conosco</a></li>
               <li>
-                <a href="./assets/pages/faq.html">Perguntas Frequentes</a>
+                <a href="./faq.html">Perguntas Frequentes</a>
               </li>
             </ul>
           </div>
@@ -175,24 +207,24 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li>
-                <a href="./assets/pages/programas.html">Programas e Serviços</a>
+                <a href="./programas.html">Programas e Serviços</a>
               </li>
-              <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
-              <li><a href="./assets/pages/contato.html">Contatos</a></li>
+              <li><a href="./inscricao.html">Matrícula</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Corporativo</h2>
             <ul>
-              <li><a href="./assets/pages/blog.html">Blog e Notícias</a></li>
-              <li><a href="./assets/pages/depoimentos.html">Depoimentos</a></li>
+              <li><a href="./blog.html">Blog e Notícias</a></li>
+              <li><a href="./depoimentos.html">Depoimentos</a></li>
             </ul>
           </div>
         </div>
       </section>
       <section class="footerDisclaimer">
             <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./assets/pages/contato.html"></a>
+                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
             </p>              
             <p>
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
@@ -204,6 +236,5 @@
            
       </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
   </body>
 </html>
