--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -3,52 +3,48 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-    <title>Orange Fitness - Home</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <title>Depoimentos</title>
+    
+</head>
+<body>
     <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
-        </ul>
-      </nav>
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+        <nav>
+            <ul>                                 
+                <li><a href="./horario.html">Horário de Aulas</a></li>
+                <li><a href="./galeria.html">Galeria de Fotos</a></li>                
+                <li><a href="./membros.html">Área de Membros</a></li>               
+                <li><a href="./carrinho.html">Carrinho de compra</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
-        <p>
-          A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
-          condicionamento físico. Oferecemos uma ampla gama de programas de
-          treinamento, instrutores experientes e instalações de última geração.
-        </p>
+      <h1>Depoimentos</h1>
+      <section class="testimonial">
+        <h2>Depoimento de Maria</h2>
+        <blockquote>
+          "Graças à Orange Fitness, transformei minha vida. Perdi peso, ganhei
+          confiança e me sinto mais saudável do que nunca. Os instrutores são
+          incríveis!"
+        </blockquote>
       </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
-        <p>
-          Segunda a Sexta: 6h - 22h<br />
-          Sábado: 8h - 18h<br />
-          Domingo: Fechado
-        </p>
+      <section class="testimonial">
+        <h2>Depoimento de João</h2>
+        <blockquote>
+          "Malhar na Orange Fitness tem sido uma jornada incrível. Sinto-me mais
+          forte e com mais energia. Não poderia estar mais feliz com os
+          resultados!"
+        </blockquote>
       </section>
-      <section class="location">
-        <h2>Localização</h2>
-        <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
-        </p>
-      </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
+      <section class="testimonial">
+        <h2>Depoimento de Ana</h2>
+        <blockquote>
+          "A Orange Fitness é mais do que um lugar para se exercitar. É uma
+          comunidade de pessoas dedicadas à saúde e ao bem-estar. Sinto-me em
+          casa aqui."
+        </blockquote>
       </section>
     </main>
     <footer class="footer">
@@ -192,7 +188,7 @@
       </section>
       <section class="footerDisclaimer">
             <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./assets/pages/contato.html"></a>
+                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
             </p>              
             <p>
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
@@ -204,6 +200,6 @@
            
       </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
