--- a/assets/pages/horario.html
+++ b/assets/pages/horario.html
@@ -3,52 +3,57 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-    <title>Orange Fitness - Home</title>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <title>Horário de Aulas</title>
+   
   </head>
   <body>
     <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
-        </ul>
-      </nav>
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+        <nav>
+            <ul>               
+                <li><a href="./carrinho.html">Carrinho</a></li>
+                <li><a href="./membros.html">Membros</a></li>
+                <li><a href="./galeria.html">Galeria</a></li>
+                <li><a href="./horario.html">Horários</a></li>    
+            </ul>
+        </nav>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
+      <h1>Horário de Aulas</h1>
+      <section class="class-schedule">
+        <h2>Horário de Aulas</h2>
         <p>
-          A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
-          condicionamento físico. Oferecemos uma ampla gama de programas de
-          treinamento, instrutores experientes e instalações de última geração.
+          Confira nosso horário de aulas e treinamentos para planejar suas
+          visitas à academia:
         </p>
-      </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
-        <p>
-          Segunda a Sexta: 6h - 22h<br />
-          Sábado: 8h - 18h<br />
-          Domingo: Fechado
-        </p>
-      </section>
-      <section class="location">
-        <h2>Localização</h2>
-        <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
-        </p>
-      </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
+        <table>
+          <tr>
+            <th>Segunda-feira</th>
+            <td>Aulas de Grupo: 10h - 11h30</td>
+          </tr>
+          <tr>
+            <th>Terça-feira</th>
+            <td>Yoga: 18h - 19h30</td>
+          </tr>
+          <tr>
+            <th>Quarta-feira</th>
+            <td>Musculação: 8h - 21h</td>
+          </tr>
+          <tr>
+            <th>Quinta-feira</th>
+            <td>Aulas de Grupo: 9h - 10h30</td>
+          </tr>
+          <tr>
+            <th>Sexta-feira</th>
+            <td>Musculação: 7h - 20h</td>
+          </tr>
+          <tr>
+            <th>Sábado</th>
+            <td>Yoga: 10h - 11h30</td>
+          </tr>
+        </table>
       </section>
     </main>
     <footer class="footer">
@@ -159,15 +164,15 @@
           <div class="footerLinkPage">
             <h2 class="footerTitler">Institucional</h2>
             <ul >
-              <li><a href="./assets/pages/sobre.html">Sobre a Academia</a></li>
-              <li><a href="./assets/pages/termos.html">Termos de Uso</a></li>
+              <li><a href="./sobre.html">Sobre a Academia</a></li>
+              <li><a href="./termos.html">Termos de Uso</a></li>
               <li>
-                <a href="./assets/pages/politicas.html"
+                <a href="./politicas.html"
                   >Política de Privacidade</a>
               </li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./faleConosco.html">Fale Conosco</a></li>
               <li>
-                <a href="./assets/pages/faq.html">Perguntas Frequentes</a>
+                <a href="./faq.html">Perguntas Frequentes</a>
               </li>
             </ul>
           </div>
@@ -175,24 +180,24 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li>
-                <a href="./assets/pages/programas.html">Programas e Serviços</a>
+                <a href="./programas.html">Programas e Serviços</a>
               </li>
-              <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
-              <li><a href="./assets/pages/contato.html">Contatos</a></li>
+              <li><a href="./inscricao.html">Matrícula</a></li>              
+              li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Corporativo</h2>
             <ul>
-              <li><a href="./assets/pages/blog.html">Blog e Notícias</a></li>
-              <li><a href="./assets/pages/depoimentos.html">Depoimentos</a></li>
+              <li><a href="./blog.html">Blog e Notícias</a></li>
+              <li><a href="./depoimentos.html">Depoimentos</a></li>
             </ul>
           </div>
         </div>
       </section>
       <section class="footerDisclaimer">
             <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./assets/pages/contato.html"></a>
+                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
             </p>              
             <p>
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
@@ -200,10 +205,8 @@
             <p>
                 &copy; 2023 Orange Fitness
             </p>    
-                
-           
       </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
+    <script src="../JS/script.js"></script>
   </body>
 </html>
