--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -3,52 +3,50 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-    <title>Orange Fitness - Home</title>
-  </head>
-  <body>
-    <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
-        </ul>
-      </nav>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <title>Área de Membros</title>
+   
+</head>
+<body>
+    <header>
+        <header class="navegation">
+            <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+            <nav>
+                <ul>                                 
+                  <li><a href="./carrinho.html">Carrinho</a></li>
+                  <li><a href="./membros.html">Membros</a></li>
+                  <li><a href="./galeria.html">Galeria</a></li>
+                  <li><a href="./horario.html">Horários</a></li>
+                </ul>
+            </nav>
+        </header>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
-        <p>
-          A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
-          condicionamento físico. Oferecemos uma ampla gama de programas de
-          treinamento, instrutores experientes e instalações de última geração.
-        </p>
+      <h1>Área de Membros</h1>
+      <section class="member-features">
+        <h2>Recursos para Membros</h2>
+        <ul>
+          <li>Agendamento de aulas online</li>
+          <li>Acompanhamento do progresso</li>
+          <li>Dicas exclusivas de treinamento</li>
+        </ul>
       </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
+      <section class="member-login">
+        <h2>Login de Membros</h2>
         <p>
-          Segunda a Sexta: 6h - 22h<br />
-          Sábado: 8h - 18h<br />
-          Domingo: Fechado
+          Seja bem-vindo à nossa Área de Membros. Faça o login para acessar
+          recursos exclusivos:
         </p>
-      </section>
-      <section class="location">
-        <h2>Localização</h2>
-        <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
-        </p>
-      </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
+        <form>
+          <label for="username">Nome de Usuário:</label>
+          <input type="text" id="username" name="username" required />
+
+          <label for="password">Senha:</label>
+          <input type="password" id="password" name="password" required />
+
+          <button type="submit">Login</button>
+        </form>
       </section>
     </main>
     <footer class="footer">
@@ -159,15 +157,15 @@
           <div class="footerLinkPage">
             <h2 class="footerTitler">Institucional</h2>
             <ul >
-              <li><a href="./assets/pages/sobre.html">Sobre a Academia</a></li>
-              <li><a href="./assets/pages/termos.html">Termos de Uso</a></li>
+              <li><a href="./sobre.html">Sobre a Academia</a></li>
+              <li><a href="./termos.html">Termos de Uso</a></li>
               <li>
-                <a href="./assets/pages/politicas.html"
+                <a href="./politicas.html"
                   >Política de Privacidade</a>
               </li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./faleConosco.html">Fale Conosco</a></li>
               <li>
-                <a href="./assets/pages/faq.html">Perguntas Frequentes</a>
+                <a href="./faq.html">Perguntas Frequentes</a>
               </li>
             </ul>
           </div>
@@ -175,35 +173,33 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li>
-                <a href="./assets/pages/programas.html">Programas e Serviços</a>
+                <a href="./programas.html">Programas e Serviços</a>
               </li>
-              <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
-              <li><a href="./assets/pages/contato.html">Contatos</a></li>
+              <li><a href="./inscricao.html">Matrícula</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Corporativo</h2>
             <ul>
-              <li><a href="./assets/pages/blog.html">Blog e Notícias</a></li>
-              <li><a href="./assets/pages/depoimentos.html">Depoimentos</a></li>
+              <li><a href="./blog.html">Blog e Notícias</a></li>
+              <li><a href="./depoimentos.html">Depoimentos</a></li>
             </ul>
           </div>
         </div>
       </section>
       <section class="footerDisclaimer">
             <p>
-                *Consulte as condições promocionais e regulamentos na página: <a href="./assets/pages/contato.html"></a>
+                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
             </p>              
             <p>
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
             </p>   
             <p>
                 &copy; 2023 Orange Fitness
-            </p>    
-                
-           
+            </p>   
       </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
+    <script src="../JS/script.js"></script>
   </body>
 </html>
