--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -3,52 +3,58 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Orange Fitness</title>
-    <link rel="stylesheet" href="./assets/CSS/style.css" />
-
-    <title>Orange Fitness - Home</title>
+    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <title>Programas e Serviços</title>
+    
   </head>
   <body>
     <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
-      <nav>
-        <ul>
-          <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
-          <li><a href="./assets/pages/membros.html">Membros</a></li>
-          <li><a href="./assets/pages/galeria.html">Galeria</a></li>
-          <li><a href="./assets/pages/horario.html">Horários</a></li>
-        </ul>
-      </nav>
+        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+        <nav>
+            <ul>               
+              <li><a href="./carrinho.html">Carrinho</a></li>
+              <li><a href="./membros.html">Membros</a></li>
+              <li><a href="./galeria.html">Galeria</a></li>
+              <li><a href="./horario.html">Horários</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
+      <h1>Programas e Serviços</h1>
+      <section class="program">
+        <h2>Musculação</h2>
         <p>
-          A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
-          condicionamento físico. Oferecemos uma ampla gama de programas de
-          treinamento, instrutores experientes e instalações de última geração.
+          Aproveite nossa academia de última geração com uma variedade de
+          equipamentos de musculação. Nossos instrutores certificados estão à
+          disposição para ajudá-lo a atingir seus objetivos.
         </p>
+        <p>Horários:<br />Segunda a Sexta: 6h - 22h<br />Sábado: 8h - 18h</p>
+        <p>Preços: A partir de R$50/mês</p>
       </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
+      <section class="group-classes">
+        <h2>Aulas de Grupo</h2>
         <p>
-          Segunda a Sexta: 6h - 22h<br />
-          Sábado: 8h - 18h<br />
-          Domingo: Fechado
+          Oferecemos uma variedade de aulas de grupo, incluindo spinning, zumba,
+          pilates e muito mais. Nossos instrutores especializados garantem que
+          você tenha uma experiência divertida e eficaz.
         </p>
-      </section>
-      <section class="location">
-        <h2>Localização</h2>
         <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
+          Horários:<br />Consulte o nosso calendário para os horários das aulas.
         </p>
+        <p>Preços: Incluído na assinatura mensal</p>
       </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
+      <section class="yoga">
+        <h2>Yoga</h2>
+        <p>
+          Descubra os benefícios do yoga para o corpo e a mente. Nossas aulas de
+          yoga são adequadas para todos os níveis, desde iniciantes até
+          avançados.
+        </p>
+        <p>
+          Horários:<br />Terça e Quinta: 18h - 19h30<br />Sábado: 10h - 11h30
+        </p>
+        <p>Preços: A partir de R$30/aula</p>
       </section>
     </main>
     <footer class="footer">
@@ -159,15 +165,15 @@
           <div class="footerLinkPage">
             <h2 class="footerTitler">Institucional</h2>
             <ul >
-              <li><a href="./assets/pages/sobre.html">Sobre a Academia</a></li>
-              <li><a href="./assets/pages/termos.html">Termos de Uso</a></li>
+              <li><a href="./sobre.html">Sobre a Academia</a></li>
+              <li><a href="./termos.html">Termos de Uso</a></li>
               <li>
-                <a href="./assets/pages/politicas.html"
+                <a href="./politicas.html"
                   >Política de Privacidade</a>
               </li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./faleConosco.html">Fale Conosco</a></li>
               <li>
-                <a href="./assets/pages/faq.html">Perguntas Frequentes</a>
+                <a href="./faq.html">Perguntas Frequentes</a>
               </li>
             </ul>
           </div>
@@ -175,17 +181,17 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li>
-                <a href="./assets/pages/programas.html">Programas e Serviços</a>
+                <a href="./programas.html">Programas e Serviços</a>
               </li>
-              <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
-              <li><a href="./assets/pages/contato.html">Contatos</a></li>
+              <li><a href="./inscricao.html">Matrícula</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Corporativo</h2>
             <ul>
-              <li><a href="./assets/pages/blog.html">Blog e Notícias</a></li>
-              <li><a href="./assets/pages/depoimentos.html">Depoimentos</a></li>
+              <li><a href="./blog.html">Blog e Notícias</a></li>
+              <li><a href="./depoimentos.html">Depoimentos</a></li>
             </ul>
           </div>
         </div>
@@ -204,6 +210,6 @@
            
       </section>     
     </footer>
-    <script src="./assets/JS/script.js"></script>
+    <script src="../JS/script.js"></script>
   </body>
 </html>
