primeira versão logo

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,35 +9,40 @@
     <title>Orange Fitness - Home</title>
     <link rel="shortcut icon" href="../IMG/favicon.ico" type="image/x-icon">
 </head>
+
 <body style="background-image: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(231,81,11,1))"
-class="bgblack text-primary">
+    class="bgblack text-primary">
     <header>
-        <img src="" alt="logotipo">        
-        <nav>
-            <ul>               
+        <nav class="navbar navbar-expand-sm bg-primary">
+            <ul>
                 <li><a href="./src/pages/carrinho.html">Carrinho</a></li>
                 <li><a href="./src/pages/membros.html">Membros</a></li>
                 <li><a href="./src/pages/galeria.html">Galeria</a></li>
-                <li><a href="./src/pages/horario.html">Horários</a></li>    
+                <li><a href="./src/pages/horario.html">Horários</a></li>
+                <div class="container">
+                    <img src="./src/IMG/default_765x625.png" width="320" height="205" alt="logotipo">
+                </div>
             </ul>
         </nav>
     </header>
+
     <main>
         <h1>Bem-vindo à Orange Fitness</h1>
         <section class="about">
             <h2>Sobre Nós</h2>
-            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
+            <p>A Orange Fitness é o lugar perfeito para alcançar seus objetivos de condicionamento físico. Oferecemos
+                uma ampla gama de programas de treinamento, instrutores experientes e instalações de última geração.</p>
         </section>
         <section class="hours">
             <h2>Horário de Funcionamento</h2>
             <p>Segunda a Sexta: 6h - 22h<br>
-            Sábado: 8h - 18h<br>
-            Domingo: Fechado</p>
+                Sábado: 8h - 18h<br>
+                Domingo: Fechado</p>
         </section>
         <section class="location">
             <h2>Localização</h2>
             <p>Endereço: Rua da Academia, 123<br>
-            Cidade, Estado, CEP: 12345-678</p>
+                Cidade, Estado, CEP: 12345-678</p>
         </section>
         <section class="image">
             <img src="academia.jpg" alt="Orange Fitness">
@@ -49,10 +55,14 @@ class="bgblack text-primary">
         <section>
             <h2>Siga a Orange Fitness</h2>
             <ul class="social-links">
-                <li><a href="https://www.facebook.com/orangefitness" target="_blank" rel="noopener noreferrer">Facebook</a></li>
-                <li> <a href="https://www.instagram.comorangefitness" target="_blank" rel="noopener noreferrer">Instagram</a></li>
-                <li><a href="https://www.twitter.com/orangefitness" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-                <li> <a href="https://www.linkedin.com/company/orangefitness" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+                <li><a href="https://www.facebook.com/orangefitness" target="_blank"
+                        rel="noopener noreferrer">Facebook</a></li>
+                <li> <a href="https://www.instagram.comorangefitness" target="_blank"
+                        rel="noopener noreferrer">Instagram</a></li>
+                <li><a href="https://www.twitter.com/orangefitness" target="_blank"
+                        rel="noopener noreferrer">Twitter</a></li>
+                <li> <a href="https://www.linkedin.com/company/orangefitness" target="_blank"
+                        rel="noopener noreferrer">LinkedIn</a></li>
             </ul>
         </section>
         <section>
@@ -83,8 +93,9 @@ class="bgblack text-primary">
             </div>
         </section>
         <p>&copy; 2023 Orange Fitness</p>
-       
-    </footer>    
+
+    </footer>
     <script src="./src/JS/script.js"></script>
 </body>
+
 </html>
