--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="navegation">
-        <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+        <a href="../../index.html"><img src="../images/4.png" alt="logo tipo da empresa"></a>                    
         <nav>
             <ul>               
                 <li><a href="./carrinho.html">Carrinho</a></li>
