--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orange Fitness</title>
     <link rel="stylesheet" href="./assets/CSS/style.css" />
-
     <title>Orange Fitness - Home</title>
   </head>
   <body>
     <header class="navegation">
-      <div>
-        <img src="" alt="logotipo" />
-      </div>
+      
+        <img src="./assets/images/orangelogo6.png" alt="logotipo" />
+      
       <nav>
         <ul>
           <li><a href="./assets/pages/carrinho.html">Carrinho</a></li>
