--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <header class="navegation">
-            <a href="../../index.html"><img src="" alt="logo tipo da empresa"></a>                    
+            <a href="../../index.html"><img src="../images/4.png" alt="logo tipo da empresa"></a>                    
             <nav>
                 <ul>                                 
                   <li><a href="./carrinho.html">Carrinho</a></li>
