add logo favicon nas páginas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Orange Fitness</title>
     <link rel="stylesheet" href="./assets/CSS/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/images/3734orangelogo4.ico">
     <title>Orange Fitness - Home</title>
   </head>
   <body>
