--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -9,7 +9,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
 
      <title>Carrinho de Compras</title>
   </head>
