--- a/assets/pages/horario.html
+++ b/assets/pages/horario.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
     <title>Horário de Aulas</title>
    
   </head>
