feito: css do depoimento

--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -8,43 +8,44 @@
     <title>Depoimentos</title>
     
 </head>
-<body>
-    <header class="navegation">
-        <a href="../../index.html"><img src="../images/orangelogozero.png" alt="logo tipo da empresa"></a>                    
-        <nav>
-            <ul>                                 
-                <li><a href="./horario.html">Horário de Aulas</a></li>
-                <li><a href="./galeria.html">Galeria de Fotos</a></li>                
-                <li><a href="./membros.html">Área de Membros</a></li>               
-                <li><a href="./carrinho.html">Carrinho de compra</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
+  <body>
+    <header class="navegation">      
+      <img src="../images/orangelogozero.png" alt="logotipo" />  
+      <nav>
+      <ul>
+        <li><a href="./carrinho.html">Carrinho</a></li>
+        <li><a href="./membros.html">Membros</a></li>
+        <li><a href="./galeria.html">Galeria</a></li>
+        <li><a href="./horario.html">Horários</a></li>
+      </ul>    
+    </nav>
+</header>
+    <main >
       <h1>Depoimentos</h1>
-      <section class="testimonial">
-        <h2>Depoimento de Maria</h2>
-        <blockquote>
+      
+      <section class="testimony">
+        <h2 >Depoimento de Maria</h2>
+        <p>
           "Graças à Orange Fitness, transformei minha vida. Perdi peso, ganhei
           confiança e me sinto mais saudável do que nunca. Os instrutores são
           incríveis!"
-        </blockquote>
+        </p>
       </section>
-      <section class="testimonial">
+      <section class="testimony">
         <h2>Depoimento de João</h2>
-        <blockquote>
+        <p>
           "Malhar na Orange Fitness tem sido uma jornada incrível. Sinto-me mais
           forte e com mais energia. Não poderia estar mais feliz com os
           resultados!"
-        </blockquote>
+        </p>
       </section>
-      <section class="testimonial">
+      <section class="testimony">
         <h2>Depoimento de Ana</h2>
-        <blockquote>
+        <p>
           "A Orange Fitness é mais do que um lugar para se exercitar. É uma
           comunidade de pessoas dedicadas à saúde e ao bem-estar. Sinto-me em
           casa aqui."
-        </blockquote>
+        </p>
       </section>
     </main>
     <footer class="footer">
@@ -155,15 +156,15 @@
           <div class="footerLinkPage">
             <h2 class="footerTitler">Institucional</h2>
             <ul >
-              <li><a href="./assets/pages/sobre.html">Sobre a Academia</a></li>
-              <li><a href="./assets/pages/termos.html">Termos de Uso</a></li>
+              <li><a href="./sobre.html">Sobre a Academia</a></li>
+              <li><a href="./termos.html">Termos de Uso</a></li>
               <li>
-                <a href="./assets/pages/politicas.html"
+                <a href="./politicas.html"
                   >Política de Privacidade</a>
               </li>
-              <li><a href="./assets/pages/faleConosco.html">Fale Conosco</a></li>
+              <li><a href="./faleConosco.html">Fale Conosco</a></li>
               <li>
-                <a href="./assets/pages/faq.html">Perguntas Frequentes</a>
+                <a href="./faq.html">Perguntas Frequentes</a>
               </li>
             </ul>
           </div>
@@ -171,17 +172,17 @@
             <h2 class="footerTitler">Planos</h2>
             <ul>
               <li>
-                <a href="./assets/pages/programas.html">Programas e Serviços</a>
+                <a href="./programas.html">Programas e Serviços</a>
               </li>
-              <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
-              <li><a href="./assets/pages/contato.html">Contatos</a></li>
+              <li><a href="./inscricao.html">Matrícula</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Corporativo</h2>
             <ul>
-              <li><a href="./assets/pages/blog.html">Blog e Notícias</a></li>
-              <li><a href="./assets/pages/depoimentos.html">Depoimentos</a></li>
+              <li><a href="./blog.html">Blog e Notícias</a></li>
+              <li><a href="./depoimentos.html">Depoimentos</a></li>
             </ul>
           </div>
         </div>
