--- a/assets/pages/horario.html
+++ b/assets/pages/horario.html
@@ -183,7 +183,7 @@
                 <a href="./programas.html">Programas e Serviços</a>
               </li>
               <li><a href="./inscricao.html">Matrícula</a></li>              
-              li><a href="./contato.html">Contatos</a></li>
+              <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
           <div  class="footerLinkPage">
