--- a/index.html
+++ b/index.html
@@ -25,33 +25,44 @@
       </nav>
     </header>
     <main>
-      <h1>Bem-vindo à Orange Fitness</h1>
-      <section class="about">
-        <h2>Sobre Nós</h2>
-        <p>
+      <div>
+        <h1>Bem-vindo à Orange Fitness</h1>
+      </div>      
+      <div>
+        <section class="about">
+          <h2>Sobre Nós</h2>
+          <p>
           A Orange Fitness é o lugar perfeito para alcançar seus objetivos de
           condicionamento físico. Oferecemos uma ampla gama de programas de
           treinamento, instrutores experientes e instalações de última geração.
-        </p>
-      </section>
-      <section class="hours">
-        <h2>Horário de Funcionamento</h2>
-        <p>
+          </p>
+          <img src="#" alt="imagem sobre a academia">
+        </section>
+      </div>
+      <div>
+        <section class="hours">
+          <h2>Horário de Funcionamento</h2>
+          <p>
           Segunda a Sexta: 6h - 22h<br />
           Sábado: 8h - 18h<br />
           Domingo: Fechado
-        </p>
-      </section>
-      <section class="location">
-        <h2>Localização</h2>
-        <p>
-          Endereço: Rua da Academia, 123<br />
-          Cidade, Estado, CEP: 12345-678
-        </p>
-      </section>
-      <section class="image">
-        <img src="academia.jpg" alt="Orange Fitness" />
-      </section>
+          </p>
+          <img src="#" alt="imagem d aacademia">
+        </section>
+      </div>
+      <div>
+        <section class="location">
+          <h2>Localização</h2>
+          <p>
+          Endereço: Rua Benjamim Costanta, 960<br />
+          Santa Maria, RS, CEP: 97050-022     
+         </p> 
+         <div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1457.3407626318808!2d-53.80064400311654!3d-29.686140331811547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9503cb4088000001%3A0xbb53997e0eb0ea64!2sBoa%20Forma%20Academias!5e0!3m2!1spt-BR!2sbr!4v1699519941934!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+         </div>
+       ></iframe>
+       </section>
+      </div> 
     </main>
     <footer class="footer">
       <section>
